# allman

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  setup_gpu.sh
.claude/: settings.json
.claude/commands/: add-simulation.md  add-tool.md  bench.md  deep-review.md  feature-branch.md  optimize.md  pr.md  preflight.md  refactor.md  review-hot-path.md  test-hypothesis.md
examples/: 01_register_agents.sh  02_send_message.sh  03_get_inbox.sh  04_search_messages.sh  05_full_loop.sh
migrations/: 20240101000000_initial.sql
src/: controllers.rs  git_actor.rs  main.rs  models.rs  state.rs
