[package]
name = "allman"
version = "0.1.0"
edition = "2021"
authors = ["MCP Agent Mail Team"]
description = "A high-performance, headless MCP Agent Mail server named in honor of Eric Allman."

[dependencies]
# Async Runtime & Web Server
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Search Engine
tantivy = "0.19"

# Version Control
git2 = "0.18"

# Concurrent Data Structures
dashmap = "5"
crossbeam-channel = "0.5"

# Utilities
uuid = { version = "1.7", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
rand = "0.8"

# HTTP Client for Simulation & Ollama
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
